--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,48 @@
 name: "ci"
 
 on: [push, pull_request]
+
 jobs:
-  main:
-    name: main
-    runs-on: ubuntu-latest
+  test:
+    if: "!contains(github.event.head_commit.message, 'skip-ci')"
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node-version: [20.x]
+
+    runs-on: ${{ matrix.os }}
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: "Hello"
-        run: |
-          echo "Hello"
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache ~/.pnpm-store
+        uses: actions/cache@v4
+        env:
+          cache-name: cache-pnpm-store
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ matrix.node-version }}-test-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.node-version }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-${{ matrix.node-version }}-test-
+            ${{ runner.os }}-
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8
+
+      - name: Install deps
+        run: pnpm i
+      
+      - name: build
+        run: pnpm build
+
+      # Runs a set of commands using the runners shell
+      - name: Build and Test
+        run: pnpm test
