--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,11 +32,10 @@ jobs:
           cache-name: cache-pnpm-store
         with:
           path: ~/.pnpm-store
-          key: ${{ runner.os }}-${{ matrix.node-version }}-test-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          key: pnpm-store-${{ runner.os }}-${{ matrix.node-version }}-test-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-${{ matrix.node-version }}-test-${{ env.cache-name }}-
-            ${{ runner.os }}-${{ matrix.node-version }}-test-
-            ${{ runner.os }}-
+            pnpm-store-${{ runner.os }}-${{ matrix.node-version }}-test-${{ env.cache-name }}-
+            pnpm-store-${{ runner.os }}-${{ matrix.node-version }}-test-
 
       - name: Install deps
         run: pnpm i
@@ -45,5 +44,8 @@ jobs:
         run: pnpm build
 
       # Runs a set of commands using the runners shell
-      - name: Build and Test
+      - name: test
         run: pnpm test
+      
+      - name: lint
+        run: pnpm lint
