--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,11 @@
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "outDir": "dist/esm",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "skipLibCheck": true,
-    "outDir": "dist/esm"
+    "skipLibCheck": true
   },
   "include": ["src", "types"]
 }
