--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,18 +25,25 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 8
-
-      - name: Cache ~/.pnpm-store
-        uses: actions/cache@v4
-        env:
-          cache-name: cache-pnpm-store
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
         with:
-          path: ~/.pnpm-store
-          key: pnpm-store-${{ runner.os }}-${{ matrix.node-version }}-test-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          version: 8
+          run_install: false
+  
+      - name: pnpm-store-dir
+        shell: bash
+        run: |
+          echo "PNPM_STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      
+      - uses: actions/cache@v4
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.PNPM_STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            pnpm-store-${{ runner.os }}-${{ matrix.node-version }}-test-${{ env.cache-name }}-
-            pnpm-store-${{ runner.os }}-${{ matrix.node-version }}-test-
-
+            ${{ runner.os }}-pnpm-store-
+      
       - name: Install deps
         run: pnpm i
 
