--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "@jsse/pbfont",
   "type": "module",
   "version": "0.0.1",
-  "author": "sheldon",
+  "author": "jessekrubin",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dynamic-graphics-inc/dgts.git",
-    "directory": "templates/template-lib-tsup"
+    "url": "https://github.com/jessekrubin/pbfont.git"
   },
   "exports": {
     ".": {
@@ -28,27 +27,33 @@
     "node": ">=14.18"
   },
   "scripts": {
-    "gen": "npx buf generate proto",
+    "gen": "npx buf generate proto && pnpm run fmt",
     "gen:clean": "npx buf generate proto --clean",
     "build-fast": "tsup",
-    "build": "pnpm gen && tsup --dts",
+    "build": "pnpm gen && tsup --dts && tsc",
+    "build:tsc": "tsc",
     "fmt": "prettier --write src/**/*.{js,jsx,ts,tsx} package.json",
     "lint": "eslint .",
     "test": "vitest run",
+    "cov": "vitest run --coverage",
     "tsup": "tsup",
     "vitest": "vitest --config vitest.config.ts --run",
     "vitest:watch": "vitest --config vitest.config.ts"
   },
+  "dependencies": {
+    "@bufbuild/protobuf": "^1.10.0"
+  },
   "devDependencies": {
-    "@bufbuild/buf": "^1.32.0",
-    "@bufbuild/protobuf": "^1.9.0",
-    "@bufbuild/protoc-gen-es": "^1.9.0",
-    "@jsse/eslint-config": "^0.1.14",
-    "@types/node": "^20.12.12",
-    "eslint": "~9.3.0",
-    "prettier": "~3.2.5",
-    "tsup": "~8.0.2",
-    "tsx": "~4.10.5",
+    "@bufbuild/buf": "^1.32.2",
+    "@bufbuild/protoc-gen-es": "^1.10.0",
+    "@jsse/eslint-config": "^0.1.15",
+    "@jsse/tsconfig": "^0.0.3",
+    "@types/node": "^20.14.2",
+    "@vitest/coverage-v8": "^1.6.0",
+    "eslint": "^8.56.0",
+    "prettier": "~3.3.1",
+    "tsup": "~8.1.0",
+    "tsx": "~4.11.2",
     "typescript": "~5.4.5",
     "vitest": "~1.6.0"
   }
