--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jsse/pbfont",
   "type": "module",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "author": "jessekrubin",
   "license": "MIT",
   "homepage": "https://github.com/jessekrubin/pbfont#readme",
@@ -72,5 +72,11 @@
     "tsx": "~4.19.3",
     "typescript": "~5.7.3",
     "vitest": "~3.0.6"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@bufbuild/buf",
+      "esbuild"
+    ]
   }
 }
