build: switch to using tsdown (#187)
* format

* package json

* switch to tsdown

* switch to tsdown

* tsdown

* fix: license file

* doc: change

* update eslint config

* fix eslint peer dep

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,26 +2,15 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@jsse/tsconfig/tsconfig.json",
   "compilerOptions": {
-    "target": "es2022",
     "lib": ["es2023"],
     "module": "node16",
     "moduleResolution": "node16",
-    "checkJs": true,
-    "strict": true,
+    "allowJs": false,
+    "checkJs": false,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "exactOptionalPropertyTypes": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "outDir": "dist/esm",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
+    "isolatedDeclarations": true,
     "skipLibCheck": true
   },
   "include": ["src", "types"]
