--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jsse/pbfont",
   "type": "module",
-  "version": "0.2.8",
+  "version": "0.3.0",
   "author": "jessekrubin",
   "license": "MIT",
   "homepage": "https://github.com/jessekrubin/pbfont#readme",
@@ -33,8 +33,8 @@
     "node": ">=18"
   },
   "scripts": {
-    "build": "pnpm gen && tsup --dts && tsc",
-    "build-fast": "tsup",
+    "build": "pnpm gen && tsdown --dts && tsc",
+    "build-fast": "tsdown",
     "build:tsc": "tsc",
     "change": "changeset",
     "check": "eslint . && prettier --check .",
@@ -50,7 +50,7 @@
     "prepack": "npm run build",
     "test": "vitest run",
     "tsc": "tsc -p tsconfig.json",
-    "tsup": "tsup",
+    "tsup": "tsdown",
     "typecheck": "tsc --noEmit",
     "vitest": "vitest --config vitest.config.ts --run",
     "vitest:watch": "vitest --config vitest.config.ts"
@@ -62,13 +62,13 @@
     "@bufbuild/buf": "^1.55.1",
     "@bufbuild/protoc-gen-es": "^2.6.2",
     "@changesets/cli": "^2.29.5",
-    "@jsse/eslint-config": "^0.4.6",
+    "@jsse/eslint-config": "^0.4.8",
     "@jsse/tsconfig": "^0.3.0",
-    "@types/node": "^22.16.5",
+    "@types/node": "^24.1.0",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.32.0",
     "prettier": "~3.6.2",
-    "tsup": "~8.5.0",
+    "tsdown": "^0.13.0",
     "tsx": "~4.20.3",
     "typescript": "~5.8.3",
     "vitest": "~3.2.4"
