--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,3 +63,4 @@ jobs:
       - uses: fastify/github-action-merge-dependabot@v3
         with:
           target: "minor"
+          exclude: '@types/node'
